# go-objstore

./: .dockerignore  .gitignore  .golangci.yml  .gosec.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE-COMMERCIAL.md  Makefile  README.md  cleanup_release_assets.sh  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  gopls.yaml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
api/mcp/: server-config.json
api/openapi/: objstore.yaml
api/proto/: objstore.pb.go  objstore.proto  objstore_grpc.pb.go
api/sdks/: Makefile  README.md  SUMMARY.txt
api/sdks/python/: .gitignore  Dockerfile  Dockerfile.integration  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_methods_static.sh  verify_new_methods.py  verify_sdk.sh
api/sdks/python/examples/: basic_usage.py  lifecycle_replication_example.py  mcp_unix_example.py
api/sdks/python/objstore/: __init__.py  _http.py  _jsonrpc.py  client.py  exceptions.py  grpc_client.py  mcp_client.py  models.py  quic_client.py  rest_client.py  unix_client.py
api/sdks/python/objstore/proto/: objstore_pb2.py  objstore_pb2.pyi  objstore_pb2_grpc.py
api/sdks/python/scripts/: generate_grpc.sh
api/sdks/python/tests/: __init__.py
api/sdks/python/tests/e2e/: test_smoke.py
api/sdks/python/tests/integration/: __init__.py  docker-compose.yml  test_comprehensive.py  test_integration.py
api/sdks/python/tests/unit/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_grpc_client.py  test_lifecycle_replication.py  test_mcp_client.py  test_models.py  test_quic_client.py  test_rest_client.py  test_unix_client.py
api/sdks/rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  DELIVERY_COMPLETE.txt  Dockerfile  Dockerfile.coverage  INSTALL.md  Makefile  README.md  build.rs  docker-compose.yml
api/sdks/rust/.github/workflows/: ci.yml
api/sdks/rust/examples/: e2e_smoke.rs  grpc_client.rs  mcp_unix_client.rs  quic_client.rs  rest_client.rs  unified_client.rs
api/sdks/rust/scripts/: docker-test.sh
api/sdks/rust/src/: auth.rs  client.rs  duration.rs  error.rs  grpc_client.rs  jsonrpc.rs  lib.rs  mcp_client.rs  quic_client.rs  rest_client.rs  streaming.rs  types.rs  unix_client.rs
api/sdks/rust/src/proto/: .gitkeep
api/sdks/rust/tests/: README.md  integration_comprehensive.rs  integration_test.rs  mcp_unix_tests.rs  unit_tests.rs
cmd/objstore/: main.go
cmd/objstore-grpc-server/: main.go
cmd/objstore-mcp-server/: main.go
cmd/objstore-quic-server/: main.go
cmd/objstore-rest-server/: main.go
cmd/objstore-server/: main.go
cmd/objstorelib/: main.go
docs/: README.md  facade-migration.md  testing.md
docs/architecture/: README.md  encryption.md  lifecycle.md  servers.md  storage-layer.md  storagefs.md
docs/backends/: README.md
docs/c_client/: README.md
docs/configuration/: README.md  cli.md  encryption.md  grpc-server.md  lifecycle.md  mcp-server.md  quic-server.md  rest-server.md  storage-backends.md
docs/lifecycle/: README.md
docs/replication/: README.md  watchers.md
docs/storagefs/: README.md  implementation.md
docs/usage/: README.md  cli.md  deployment.md  getting-started.md  storage-backends.md
examples/: README.md
examples/basic-usage/: main.go
examples/c_client/: .gitignore  Makefile  README.md  libobjstore.h  quick-start.md  simple_example.c  test_objstore.c
examples/encryption/: go.mod  go.sum  keychain_adapter.go  kms_adapter.go  main.go  xkms_adapter.go
examples/facade-usage/: main.go
examples/grpc-client/: main.go
examples/lifecycle-policies/: main.go
examples/storagefs/: main.go
pkg/adapters/: auth.go  auth_test.go  logger.go  logger_test.go  tls.go  tls_test.go
pkg/audit/: audit.go  audit_test.go  coverage_gap_test.go  http.go  http_test.go  middleware.go  middleware_test.go
pkg/azure/: azure.go  azure_bench_test.go  azure_coverage_test.go  azure_default_functions_test.go  azure_enhanced.go  azure_enhanced_test.go  azure_internal_test.go  azure_test.go  azure_unit_test.go  azure_wrappers_test.go  doc.go
pkg/azurearchive/: azurearchive.go  azurearchive_test.go  azurearchive_wrappers_test.go  doc.go
pkg/cli/: commands.go  commands_lifecycle_test.go  commands_replication.go  commands_replication_test.go  commands_test.go  config.go  config_test.go  coverage_gaps_test.go  errors.go  integration_test.go  output.go  output_test.go
pkg/common/: archiveonly.go  archiver.go  archiver_test.go  encrypted_storage.go  encrypted_storage_errors_test.go  encrypted_storage_test.go  encryption.go  errors.go  errors_test.go  lifecycle.go  lifecycle_persistent.go  lifecycle_persistent_errors_test.go  lifecycle_persistent_test.go  lifecycle_test.go  path_accessor.go  path_accessor_test.go  replication.go  storage.go  storage_test.go  types.go  types_test.go  validation.go  validation_bench_test.go  validation_edges_test.go  validation_test.go
pkg/factory/: archiver_test.go  errors.go  factory.go  factory_azure.go  factory_azurearchive.go  factory_bench_test.go  factory_coverage_gaps_test.go  factory_gcs.go  factory_glacier.go  factory_local.go  factory_memory.go  factory_minio.go  factory_s3.go  factory_test.go
pkg/gcs/: configure_test.go  doc.go  gcs.go  gcs_bench_test.go  gcs_coverage_test.go  gcs_enhanced.go  gcs_enhanced_test.go  gcs_test.go  wrappers_test.go
pkg/glacier/: doc.go  glacier.go  glacier_test.go
pkg/local/: atomic_write_test.go  changelog.go  lifecycle.go  lifecycle_persistent_test.go  lifecycle_run_test.go  lifecycle_test.go  local.go  local_bench_test.go  local_changelog_test.go  local_context_test.go  local_coverage_test.go  local_encryption_test.go  local_metadata_test.go  local_pagination_test.go  (+2 more)
scripts/: check-version.sh  generate-proto.sh  generate-test-certs.sh  pre-commit  run-cloud-tests.sh  setup-cloud-buckets.sh  start-test-server.sh  sync-version.sh  test-all-backends.sh
(+495 files in other folders)
