[tool.poetry]
name = "go-objstore-sdk"
version = "0.2.0"
description = "Python SDK for go-objstore with REST, gRPC, and QUIC/HTTP3 support"
authors = ["Go ObjectStore Team"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "objstore"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.33.0"
urllib3 = "^2.7.0"
certifi = ">=2024.7.4"
idna = "^3.7"
grpcio = "^1.71.2"
grpcio-tools = "^1.71.2"
protobuf = "^5.29.6"
httpx = {extras = ["http3"], version = "^0.26.0"}
pydantic = "^2.5.0"
tenacity = "^8.2.3"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"
pytest-mock = "^3.12.0"
black = "^26.5.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
responses = "^0.24.1"
setuptools = ">=78.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=objstore --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["objstore"]
omit = ["*/tests/*", "*/__pycache__/*", "*/proto/*", "*/grpc_client.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
